Bug 140027 - EDITING inserting rows before pivot table in row 1 copies format and images from headings
Summary: EDITING inserting rows before pivot table in row 1 copies format and images f...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.5.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords:
Depends on:
Blocks: Pivot-Table
  Show dependency treegraph
 
Reported: 2021-01-30 23:22 UTC by Robert Lacroix
Modified: 2025-08-18 11:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple reproducer (15.02 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-07-28 12:52 UTC, Gabor Kelemen (Collabora)
Details
The pivot table before inserting rows (18.10 KB, image/png)
2025-07-28 12:52 UTC, Gabor Kelemen (Collabora)
Details
The pivot table after inserting rows (15.49 KB, image/png)
2025-07-28 12:54 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Lacroix 2021-01-30 23:22:21 UTC
Description:
Rows inserted above a pivot table that starts in row 1 replicate the format and dropdown button images of the pivot table headings.

Steps to Reproduce:
1. Create a pivot table with one or more row fields and one data field, destination: new sheet.
2. Select entire rows (one or more) starting from row 1.
2. Insert Rows Above.

Actual Results:
The format and images from the heading cells of the pivot table are replicated in the new rows above the pivot table. Cells in the columns above row fields are protected. The result is that the pivot table appears to extend into the rows above it.

Expected Results:
Cells inserted above pivot tables which start in row 1 should have default formatting, no images, and no cell protection. This is a special case of inserting rows above row 1. It is otherwise normal for cells inserted above row 1 to inherit the format of cells in row 1.



Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.5.2
Build ID: 1:6.1.5-3+deb10u6
CPU threads: 12; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-CA (en_CA.utf8); Calc: group threaded

Also occurs in

Version: 7.0.4.2
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 12; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-CA (en_CA.utf8); UI: en-US
Calc: threaded
Comment 1 m_a_riosv 2021-01-31 00:46:23 UTC
Repro at least with the format.
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 66013201749df7d5ac5ddaf377a7b3732518a93b
CPU threads: 4; OS: Windows 10.0 Build 21296; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Comment 2 Robert Lacroix 2021-01-31 10:29:26 UTC
(In reply to m.a.riosv from comment #1)
> Repro at least with the format.
> Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
> Build ID: 66013201749df7d5ac5ddaf377a7b3732518a93b
> CPU threads: 4; OS: Windows 10.0 Build 21296; UI render: default; VCL: win
> Locale: es-ES (es_ES); UI: en-US Calc: CL

The images do not appear in the rows above the pivot table when there are columns in the pivot table.

Cell protection prevents the protected cells from becoming active with the mouse (by clicking on them with the mouse pointer), but they can become the active cell by moving there with the keyboard.
Comment 3 QA Administrators 2023-02-01 03:20:39 UTC Comment hidden (obsolete)
Comment 4 QA Administrators 2025-04-13 03:11:37 UTC Comment hidden (obsolete)
Comment 5 Gabor Kelemen (Collabora) 2025-07-28 12:52:07 UTC
Created attachment 202033 [details]
Simple reproducer

based on attachment 196791 [details] from bug 163207

Confirming in current master 

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded
Comment 6 Gabor Kelemen (Collabora) 2025-07-28 12:52:29 UTC
Created attachment 202034 [details]
The pivot table before inserting rows
Comment 7 Gabor Kelemen (Collabora) 2025-07-28 12:54:34 UTC
Created attachment 202035 [details]
The pivot table after inserting rows

The filter dropdowns are not operational and a save and reload makes them disappear.
The thick cell borders survive saving.
The problem happens only if there are no empty lines above the pivot table. Inserting some lines, saving and reloading and again inserting lines does not produce the same result.
Comment 8 Commit Notification 2025-08-15 16:34:11 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f85188809d28dfe01ac8ed8b93e62e17f59773d2

tdf#140027 - sc fix inserting rows before pivot table in row 1

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-08-15 22:27:04 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/9920cf0642b175798afb319cc4b9d8b2bef4e67c

tdf#140027 - sc fix inserting rows before pivot table in row 1

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Gabor Kelemen (Collabora) 2025-08-18 11:49:05 UTC
Verified in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 04d2a7d2f6a20bc69b7876e9c502c627e83e9f8f
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded

Now inserting any number of new rows above does not copy the borders or the dropdown graphic.