tdf#140027 - sc fix inserting rows before pivot table in row 1

Do not copy flags except Scenario when we insert a new row before/
after. Also remove hard attributes when we insert a very new first
row on the sheet. (Same what MSO does.)

Change-Id: Ia825683ab221f445b1c9977006b3f1cdffb2ea24
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189614
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
(cherry picked from commit f85188809d28dfe01ac8ed8b93e62e17f59773d2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189717
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>